<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:background="@color/colorPrimaryDark"
    tools:context=".NewsPart.NewsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="300dp"
        android:id="@+id/img_news"
        android:src="@drawable/scrum"
        android:layout_margin="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_title"
        android:textSize="18dp"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:id="@+id/title_news"
        android:textColor="@color/color_title"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_des"
            android:textSize="14dp"
            android:layout_margin="5dp"
            android:text="@string/string_date"
            android:id="@+id/date_news"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/textview_border"
            android:text="@string/string_tag"
            android:id="@+id/tag_news"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="16dp"
        android:ellipsize="end"
        android:text="@string/string_description"
        android:textColor="@color/color_des"
        android:id="@+id/description_news"/>
</LinearLayout>
    </com.google.android.material.card.MaterialCardView>
