<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card-view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/news_cardview"
    card-view:cardBackgroundColor="@color/colorPrimaryDark"
    card-view:cardCornerRadius="5dp"
    card-view:cardElevation="5dp"
    android:layout_height="wrap_content">
<LinearLayout
    xmlns="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_title"
            android:text="@string/string_title"
            android:layout_gravity="right"
            android:textSize="18dp"
            android:textStyle="bold"
            android:id="@+id/tv_title_news"/>
        <LinearLayout
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_des"
                android:textSize="14dp"
                android:layout_margin="5dp"
                android:text="@string/string_date"
                android:id="@+id/tv_date_news"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/textview_border"
                android:text="@string/string_tag"
                android:id="@+id/tv_tag_news"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="14dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/string_description"
            android:textColor="@color/color_des"
            android:id="@+id/tv_description_news"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_gravity="left">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:text="@string/string_read_more"/>


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:id="@+id/img_news"
        android:src="@drawable/scrum"/>

</LinearLayout>
    </com.google.android.material.card.MaterialCardView>
