<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android" />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:layout_height="0dp">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/logingreen" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:text="@string/fooladname"
        style="@style/stroke"
        android:textStyle="bold"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:gravity="center"
    android:layout_weight="1"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/editStyle"
        android:hint="نام کاربری     "
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:singleLine="true"
            android:padding="10dp"
            android:hint="@string/string_complete_username"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="رمز عبور      "
        style="@style/editStyle"
        android:layout_margin="10dp"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:padding="10dp"
            android:hint="@string/string_complete_pass"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical">
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="18dp"
        android:background="@drawable/buttons"
        android:text="@string/string_enter"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/string_pass_forget"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@drawable/irisa"/>
</LinearLayout>
</LinearLayout>
</FrameLayout>