<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/full"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:contentInsetStartWithNavigation="0dp"
            android:background="@color/colorPrimary"
            android:elevation="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingRight="10dp"
                android:layout_gravity="right"
                android:id="@+id/logo"
                android:paddingLeft="10dp"
                android:background="@drawable/logowhitech"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="برنامه جامع"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/logo"
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="15dp"
                />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>



<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:text="خدمات"
    android:paddingRight="20dp"
    android:textColor="@color/textColor"
    android:paddingTop="10dp"
    android:background="@color/design_default_color_surface"
    android:textStyle="bold"
    android:textSize="16dp"
    android:layout_weight="0.6"/>
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_margin="5dp"
            android:fillViewport="false">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_weight="4.5"
    android:layout_height="0dp"
    android:background="@color/colorPrimaryDark"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:layout_gravity="right"
        android:text="@string/string_general"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="@color/textColor"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycle1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:layout_gravity="right"
        android:text="@string/string_managment"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="@color/textColor"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycle2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:layout_gravity="right"
        android:text="@string/string_intertainment"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="@color/textColor"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycle3"/>


</LinearLayout>
        </ScrollView>


        <FrameLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/shadow"/>

        </FrameLayout>


    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="250dp"
        android:layout_marginTop="?attr/actionBarSize"
        app:itemIconTint="@drawable/selector2"
        app:headerLayout="@layout/navigation_header"
        android:layout_height="match_parent"
        android:layout_gravity="start"

        app:itemTextAppearance="@style/TextAppearance.AppCompat.Menu"
        app:menu="@menu/start_navigation">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_gravity="bottom">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/irisa"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:textSize="12dp"
                android:layout_height="wrap_content"
                android:text="طراحی و پیاده سازی توسط شرکت ایریسا"/>

        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
